--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "4.19.2",
     "node-cache": "5.1.2",
     "p-limit": "4.0.0",
-    "undici": "6.19.8"
+    "undici": "6.19.8",
+    "@here/flexpolyline": "1.1.1"
   }
 }
