--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "express": "4.19.2",
     "node-cache": "5.1.2",
     "p-limit": "4.0.0",
-    "undici": "6.19.8",
-    "flexible-polyline": "1.0.0"
+    "undici": "6.19.8"
   }
 }
