--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@turf/turf": "6.5.0",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "@here/flexpolyline": "^0.1.0",
     "node-cache": "5.1.2",
     "p-limit": "4.0.0",
     "undici": "6.19.8"
